logs/errors.txt

C:\Users\Matthew\Desktop\PokemonShowdown\config\formats.js:326
	{
	^

SyntaxError: Unexpected token {
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at ModdedDex.includeFormats (C:\Users\Matthew\Desktop\PokemonShowdown\sim\dex.js:1490:14)

C:\Users\Matthew\Desktop\PokemonShowdown\config\formats.js:326
	{
	^

SyntaxError: Unexpected token {
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at ModdedDex.includeFormats (C:\Users\Matthew\Desktop\PokemonShowdown\sim\dex.js:1490:14)

Additional information:


C:\Users\Matthew\Desktop\PokemonShowdown\config\formats.js:326
	{
	^

SyntaxError: Unexpected token {
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at ModdedDex.includeFormats (C:\Users\Matthew\Desktop\PokemonShowdown\sim\dex.js:1490:14)

Additional information:


Error: Worker 1 abruptly died with code 3221225786 and signal null
    at EventEmitter.cluster.on (C:\Users\Matthew\Documents\GitHub\GSCup\sockets.js:76:33)
    at emitThree (events.js:136:13)
    at EventEmitter.emit (events.js:217:7)
    at ChildProcess.worker.process.once (internal/cluster/master.js:186:13)
    at Object.onceWrapper (events.js:317:30)
    at emitTwo (events.js:126:13)
    at ChildProcess.emit (events.js:214:7)
    at Process.ChildProcess._handle.onexit (internal/child_process.js:198:12)
